bindings/rust/idax-sys/shim/idax_shim.h

/* ═══════════════════════════════════════════════════════════════════════════
 * Standard database directory trees (ida::directory)
 * ═══════════════════════════════════════════════════════════════════════════ */

typedef struct IdaxDirectoryEntry {
    char* path;
    char* name;
    char* display_name;
    char* attributes;
    int entry_kind;
} IdaxDirectoryEntry;
typedef struct IdaxDirectoryBulkFailure {
    size_t input_index;
    char* path;
    int operation_error;
    char* message;
} IdaxDirectoryBulkFailure;
typedef struct IdaxDirectoryBulkReport {
    char** affected_paths;
    size_t affected_paths_count;
    IdaxDirectoryBulkFailure* failures;
    size_t failures_count;
} IdaxDirectoryBulkReport;
int idax_directory_snapshot(int kind, const char* path,
                            IdaxDirectoryEntry** out, size_t* count);
int idax_directory_find_items(int kind, const char* pattern,
                              IdaxDirectoryEntry** out, size_t* count);
void idax_directory_entries_free(IdaxDirectoryEntry* entries, size_t count);
int idax_directory_create_directory(int kind, const char* path);
int idax_directory_remove_directory(int kind, const char* path);
int idax_directory_link(int kind, const char* path);
int idax_directory_unlink(int kind, const char* path);
int idax_directory_rename(int kind, const char* from, const char* to);
int idax_directory_fold_common_prefix(int kind, const char* path);
int idax_directory_has_natural_order(int kind, const char* path, int* out);
int idax_directory_set_natural_order(int kind, const char* path, int enable);
int idax_directory_rank(int kind, const char* path, size_t* out);
int idax_directory_change_rank(int kind, const char* path, ptrdiff_t delta);
int idax_directory_move(int kind, const char* const* paths, size_t count,
                        const char* destination, int has_rank,
                        size_t destination_rank, IdaxDirectoryBulkReport* out);
int idax_directory_remove(int kind, const char* const* paths, size_t count,
                          IdaxDirectoryBulkReport* out);
void idax_directory_bulk_report_free(IdaxDirectoryBulkReport* report);
/* ═══════════════════════════════════════════════════════════════════════════
 * Persistent registry (ida::registry)
 * ═══════════════════════════════════════════════════════════════════════════ */

int idax_registry_open(const char* key);
int idax_registry_child(const char* key, const char* name, char** out);
int idax_registry_exists(const char* key, int* out);
int idax_registry_child_keys(const char* key, char*** out, size_t* count);
int idax_registry_value_names(const char* key, char*** out, size_t* count);
void idax_registry_strings_free(char** values, size_t count);
int idax_registry_contains(const char* key, const char* name, int* out);
int idax_registry_value_kind(const char* key, const char* name,
                             int* has_value, int* out);
int idax_registry_read_string(const char* key, const char* name,
                              int* has_value, char** out);
int idax_registry_write_string(const char* key, const char* name,
                               const char* value);
int idax_registry_read_binary(const char* key, const char* name,
                              int* has_value, uint8_t** out, size_t* count);
int idax_registry_write_binary(const char* key, const char* name,
                               const uint8_t* value, size_t count);
int idax_registry_read_integer(const char* key, const char* name,
                               int* has_value, int32_t* out);
int idax_registry_write_integer(const char* key, const char* name,
                                int32_t value);
int idax_registry_read_boolean(const char* key, const char* name,
                               int* has_value, int* out);
int idax_registry_write_boolean(const char* key, const char* name, int value);
int idax_registry_erase_value(const char* key, const char* name, int* out);
int idax_registry_erase_key(const char* key, int* out);
int idax_registry_erase_tree(const char* key, int* out);
int idax_registry_read_string_list(const char* key, char*** out, size_t* count);
int idax_registry_write_string_list(const char* key,
                                    const char* const* values, size_t count);
int idax_registry_update_string_list(const char* key, const char* add,
                                     const char* remove, size_t max_records,
                                     int ignore_case);
/* ═══════════════════════════════════════════════════════════════════════════
 * Architecture-independent exception regions (ida::exception)
 * ═══════════════════════════════════════════════════════════════════════════ */

typedef struct IdaxExceptionRange {
    uint64_t start;
    uint64_t end;
} IdaxExceptionRange;
typedef struct IdaxExceptionHandlerMetadata {
    IdaxExceptionRange* regions;
    size_t regions_count;
    int has_stack_displacement;
    int64_t stack_displacement;
    int has_frame_register;
    int frame_register;
} IdaxExceptionHandlerMetadata;
/** selector_kind: 0=typed, 1=catch-all, 2=cleanup. */
typedef struct IdaxExceptionCatchHandler {
    IdaxExceptionHandlerMetadata metadata;
    int has_object_displacement;
    int64_t object_displacement;
    int selector_kind;
    int64_t type_identifier;
} IdaxExceptionCatchHandler;