bindings/rust/idax-sys/src/bindings.rs

unsafe extern "C" {
    pub fn idax_directory_snapshot(
        kind: ::std::os::raw::c_int,
        path: *const ::std::os::raw::c_char,
        out: *mut *mut IdaxDirectoryEntry,
        count: *mut usize,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_directory_find_items(
        kind: ::std::os::raw::c_int,
        pattern: *const ::std::os::raw::c_char,
        out: *mut *mut IdaxDirectoryEntry,
        count: *mut usize,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_directory_entries_free(entries: *mut IdaxDirectoryEntry, count: usize);
}
unsafe extern "C" {
    pub fn idax_directory_create_directory(
        kind: ::std::os::raw::c_int,
        path: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_directory_remove_directory(
        kind: ::std::os::raw::c_int,
        path: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_directory_link(
        kind: ::std::os::raw::c_int,
        path: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_directory_unlink(
        kind: ::std::os::raw::c_int,
        path: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_directory_rename(
        kind: ::std::os::raw::c_int,
        from: *const ::std::os::raw::c_char,
        to: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_directory_fold_common_prefix(
        kind: ::std::os::raw::c_int,
        path: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_directory_has_natural_order(
        kind: ::std::os::raw::c_int,
        path: *const ::std::os::raw::c_char,
        out: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_directory_set_natural_order(
        kind: ::std::os::raw::c_int,
        path: *const ::std::os::raw::c_char,
        enable: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_directory_rank(
        kind: ::std::os::raw::c_int,
        path: *const ::std::os::raw::c_char,
        out: *mut usize,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_directory_change_rank(
        kind: ::std::os::raw::c_int,
        path: *const ::std::os::raw::c_char,
        delta: isize,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_directory_move(
        kind: ::std::os::raw::c_int,
        paths: *const *const ::std::os::raw::c_char,
        count: usize,
        destination: *const ::std::os::raw::c_char,
        has_rank: ::std::os::raw::c_int,
        destination_rank: usize,
        out: *mut IdaxDirectoryBulkReport,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_directory_remove(
        kind: ::std::os::raw::c_int,
        paths: *const *const ::std::os::raw::c_char,
        count: usize,
        out: *mut IdaxDirectoryBulkReport,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_directory_bulk_report_free(report: *mut IdaxDirectoryBulkReport);
}
unsafe extern "C" {
    pub fn idax_registry_open(key: *const ::std::os::raw::c_char) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_registry_child(
        key: *const ::std::os::raw::c_char,
        name: *const ::std::os::raw::c_char,
        out: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_registry_exists(
        key: *const ::std::os::raw::c_char,
        out: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_registry_child_keys(
        key: *const ::std::os::raw::c_char,
        out: *mut *mut *mut ::std::os::raw::c_char,
        count: *mut usize,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_registry_value_names(
        key: *const ::std::os::raw::c_char,
        out: *mut *mut *mut ::std::os::raw::c_char,
        count: *mut usize,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_registry_strings_free(values: *mut *mut ::std::os::raw::c_char, count: usize);
}
unsafe extern "C" {
    pub fn idax_registry_contains(
        key: *const ::std::os::raw::c_char,
        name: *const ::std::os::raw::c_char,
        out: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_registry_value_kind(
        key: *const ::std::os::raw::c_char,
        name: *const ::std::os::raw::c_char,
        has_value: *mut ::std::os::raw::c_int,
        out: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_registry_read_string(
        key: *const ::std::os::raw::c_char,
        name: *const ::std::os::raw::c_char,
        has_value: *mut ::std::os::raw::c_int,
        out: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_registry_write_string(
        key: *const ::std::os::raw::c_char,
        name: *const ::std::os::raw::c_char,
        value: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_registry_read_binary(
        key: *const ::std::os::raw::c_char,
        name: *const ::std::os::raw::c_char,
        has_value: *mut ::std::os::raw::c_int,
        out: *mut *mut u8,
        count: *mut usize,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_registry_write_binary(
        key: *const ::std::os::raw::c_char,
        name: *const ::std::os::raw::c_char,
        value: *const u8,
        count: usize,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_registry_read_integer(
        key: *const ::std::os::raw::c_char,
        name: *const ::std::os::raw::c_char,
        has_value: *mut ::std::os::raw::c_int,
        out: *mut i32,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_registry_write_integer(
        key: *const ::std::os::raw::c_char,
        name: *const ::std::os::raw::c_char,
        value: i32,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_registry_read_boolean(
        key: *const ::std::os::raw::c_char,
        name: *const ::std::os::raw::c_char,
        has_value: *mut ::std::os::raw::c_int,
        out: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_registry_write_boolean(
        key: *const ::std::os::raw::c_char,
        name: *const ::std::os::raw::c_char,
        value: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_registry_erase_value(
        key: *const ::std::os::raw::c_char,
        name: *const ::std::os::raw::c_char,
        out: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_registry_erase_key(
        key: *const ::std::os::raw::c_char,
        out: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_registry_erase_tree(
        key: *const ::std::os::raw::c_char,
        out: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_registry_read_string_list(
        key: *const ::std::os::raw::c_char,
        out: *mut *mut *mut ::std::os::raw::c_char,
        count: *mut usize,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_registry_write_string_list(
        key: *const ::std::os::raw::c_char,
        values: *const *const ::std::os::raw::c_char,
        count: usize,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_registry_update_string_list(
        key: *const ::std::os::raw::c_char,
        add: *const ::std::os::raw::c_char,
        remove: *const ::std::os::raw::c_char,
        max_records: usize,
        ignore_case: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct IdaxExceptionRange {
    pub start: u64,
    pub end: u64,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of IdaxExceptionRange"][::std::mem::size_of::<IdaxExceptionRange>() - 16usize];
    ["Alignment of IdaxExceptionRange"][::std::mem::align_of::<IdaxExceptionRange>() - 8usize];
    ["Offset of field: IdaxExceptionRange::start"]
        [::std::mem::offset_of!(IdaxExceptionRange, start) - 0usize];
    ["Offset of field: IdaxExceptionRange::end"]
        [::std::mem::offset_of!(IdaxExceptionRange, end) - 8usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IdaxExceptionHandlerMetadata {
    pub regions: *mut IdaxExceptionRange,
    pub regions_count: usize,
    pub has_stack_displacement: ::std::os::raw::c_int,
    pub stack_displacement: i64,
    pub has_frame_register: ::std::os::raw::c_int,
    pub frame_register: ::std::os::raw::c_int,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of IdaxExceptionHandlerMetadata"]
        [::std::mem::size_of::<IdaxExceptionHandlerMetadata>() - 40usize];
    ["Alignment of IdaxExceptionHandlerMetadata"]
        [::std::mem::align_of::<IdaxExceptionHandlerMetadata>() - 8usize];
    ["Offset of field: IdaxExceptionHandlerMetadata::regions"]
        [::std::mem::offset_of!(IdaxExceptionHandlerMetadata, regions) - 0usize];
    ["Offset of field: IdaxExceptionHandlerMetadata::regions_count"]
        [::std::mem::offset_of!(IdaxExceptionHandlerMetadata, regions_count) - 8usize];
    ["Offset of field: IdaxExceptionHandlerMetadata::has_stack_displacement"]
        [::std::mem::offset_of!(IdaxExceptionHandlerMetadata, has_stack_displacement) - 16usize];
    ["Offset of field: IdaxExceptionHandlerMetadata::stack_displacement"]
        [::std::mem::offset_of!(IdaxExceptionHandlerMetadata, stack_displacement) - 24usize];
    ["Offset of field: IdaxExceptionHandlerMetadata::has_frame_register"]
        [::std::mem::offset_of!(IdaxExceptionHandlerMetadata, has_frame_register) - 32usize];
    ["Offset of field: IdaxExceptionHandlerMetadata::frame_register"]
        [::std::mem::offset_of!(IdaxExceptionHandlerMetadata, frame_register) - 36usize];
};
impl Default for IdaxExceptionHandlerMetadata {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[doc = " selector_kind: 0=typed, 1=catch-all, 2=cleanup."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IdaxExceptionCatchHandler {
    pub metadata: IdaxExceptionHandlerMetadata,
    pub has_object_displacement: ::std::os::raw::c_int,
    pub object_displacement: i64,
    pub selector_kind: ::std::os::raw::c_int,
    pub type_identifier: i64,
}
